<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/connect_pinyto" >
        <SwitchPreference
                android:title="@string/connection"  />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/account_settings" >
        <EditTextPreference
                android:title="@string/user_id"
                android:key="prefUsername"/>
        <EditTextPreference
                android:title="@string/password"                
                android:inputType="textPassword"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/information" >
		
	<Preference 
	    	   android:title="@string/version"	
	    	   android:summary="@string/version_nr"  
	    />
	</PreferenceCategory>
</PreferenceScreen>
